deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-d
spec:
  rules:
    - host: hello-world.k8s.vsakhonchik.playpit.by
      http:
        paths:
        - path: /
          backend: 
            serviceName: nexus-d
            servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: nexus-docker.k8s.vsakhonchik.playpit.by/docker_tomcat:50
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-d
  namespace: nexus
spec:
  ports:
    - name: nexus-d
      port: 80
      targetPort: 8080
  selector:
    app: tomcat
