tomcat.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tomcat

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tomcat
  name: tomcat
  namespace: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - image: nexus-docker.k8s.vsakhonchik.playpit.by/docker_tomcat:custom
        ports: 
          - containerPort: 8080
            protocol: TCP
        imagePullPolicy: Always
        name: tomcat
        readinessProbe:
          httpGet:
            port: 8080
            path: /
        livenessProbe:
          httpGet:
            port: 8080
            path: /
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tomcat
  name: tomcat
  namespace: tomcat
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: tomcat
 
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tomcat
  namespace: tomcat
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: helloworld-vsakhonchik.k8s.vsakhonchik.playpit.by 
      http:
        paths:
        - path: /
          backend:
            serviceName: tomcat
            servicePort: 80
